Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.5.1
-
None
-
-
2a7da1b3c (dev), 38c0d6004 (6.6), 9177dbd87 (6.5)
Description
There is one more regression after recent changes to QTabBar, previously reported issue here: https://bugreports.qt.io/browse/QTBUG-113345
Using a vertical tabbar with icons and text, the items above the current index is not shown if the current index is set to other than 0 before the window is drawn.
The issue first occur in Qt 6.5.1, same issue with the latest code from the dev branch.
I'm using a custom tabbar similar to the one in Qt Creator: https://github.com/strawberrymusicplayer/strawberry/blob/master/src/widgets/fancytabwidget.cpp
If I move setCurrentIndex() to the showEvent() the issue does not occur.
I'll attach a video showing the problem.
Attachments
Issue Links
- is duplicated by
-
QTBUG-115109 [REG] QTabWidget doesn't draw tabs on the left of the initially current tab
-
- Closed
-
-
QTBUG-115163 [Possible regression 6.4->6.5] Qt Designer 6.5.1 does not handle QTabWidget correctly at the first place
-
- Closed
-
For Gerrit Dashboard: QTBUG-114204 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
482350,1 | QTabBar: recalculate scroll offset when showing | 6.6 | qt/qtbase | Status: NEW | 0 | 0 |
481811,3 | QTabBar: recalculate scroll offset when showing | dev | qt/qtbase | Status: MERGED | +2 | 0 |
482349,2 | QTabBar: recalculate scroll offset when showing | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
482351,2 | QTabBar: recalculate scroll offset when showing | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |